minikube/_infra/ingress.yml
#==================================================
# ingress-https
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # argocd
    - host: argocd.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd
                port:
                  number: 443
    # argocd
    - host: argocd.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd
                port:
                  number: 443

---
#==================================================
# ingress-http
#==================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
    # arch4j-web
    - host: dev.arch4j-web.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arch4j-web
                port:
                  number: 8080
    # arch4j-daemon
    - host: dev.arch4j-daemon.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arch4j-daemon
                port:
                  number: 8081
    # fintics-web
    - host: fintics-web.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-web
                port:
                  number: 8080
    # fintics-daemon
    - host: fintics-daemon.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-daemon
                port:
                  number: 8081
    # fintics-etf
    - host: fintics-etf.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-etf
                port:
                  number: 8080
    # fintics-ai
    - host: fintics-ai.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fintics-ai
                port:
                  number: 8080
    # duice-example
    - host: dev.duice-example.chomookun.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: duice-example
                port:
                  number: 3000
    # soma-admin
    - host: dev.soma-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-admin
                port:
                  number: 8080
    # soma-collector
    - host: dev.soma-collector.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: soma-collector
                port:
                  number: 8080
    # batman-admin
    - host: dev.batman-admin.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: batman-admin
                port:
                  number: 8080
